# Panel-Studio

./: .gitignore  main.py  pyproject.toml  update.py
instance/: .~data-human.xlsx  data-human.xlsx  default.db  navigation.db  service.db
static/css/: _sidebar.css  _tagSelector.css  index.css  login.css  navigation.css  searchbar.css
static/js/_sidebar/: showtagSelector.js
static/js/_tagSelector/: switchTag.js
static/js/common/: initCookie.js
static/js/index/: engineStatus.js  search.js  switchEngine.js
templates/: _sidebar.html  _tagSelector.html  index.html  login.html  navigation.html  service.html
